force-app/main/default/objects/ServiceAppointment/fields/Appointment_Application_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Application_Time__c</fullName>
    <description>Formula field created to overcome the issue of not displaying the time component of Appointment Time on email merge fields.</description>
    <formula>DATETIMEVALUE( EarliestStartTime )</formula>
    <label>Appointment Application Time</label>
    <type>DateTime</type>
</CustomField>