force-app/main/default/objects/ServiceAppointment/fields/Branch_Phone2__c.field-meta.xml
<CustomField>
    <fullName>Branch_Phone2__c</fullName>
    <description>Branch&#39;s contact phone number</description>
    <formula>ServiceTerritory.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Phone</label>
    <type>Text</type>
</CustomField>