force-app/main/default/objects/ServiceAppointment/fields/Coach_Decline_Comments__c.field-meta.xml
<CustomField>
    <fullName>Coach_Decline_Comments__c</fullName>
    <inlineHelpText>If Coach has to decline an appointment due to unavailability or some other reason, Coach should provide the details while declining the appointment.</inlineHelpText>
    <label>Coach Decline Comments</label>
    <type>TextArea</type>
</CustomField>