force-app/main/default/objects/ServiceAppointment/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <description>Holds the Email Address of the (Person Account) Customer linked to the Service Appointment. Populated via PB003 process.</description>
    <inlineHelpText>Email Address of the (Person Account) Customer linked to the Service Appointment.</inlineHelpText>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>