force-app/main/default/objects/ServiceAppointment/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Holds the Name of the (Person Account) Customer linked to the Service Appointment. Populated via PB003 process.</description>
    <inlineHelpText>Name of the (Person Account) Customer linked to the Service Appointment.</inlineHelpText>
    <label>Customer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>