force-app/main/default/objects/ServiceAppointment/fields/Primary_Service_Resource_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service_Resource_Email__c</fullName>
    <description>Holds the Email Address of the primary service resource linked to the Service Appointment. Populated via PB002 process.</description>
    <inlineHelpText>Email Address of the primary service resource linked to the Service Appointment.</inlineHelpText>
    <label>Primary Service Resource Email</label>
    <type>Email</type>
</CustomField>