force-app/main/default/objects/ServiceAppointment/fields/Primary_Service_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service_Resource_Name__c</fullName>
    <description>Holds the Name of the primary service resource linked to the Service Appointment. Populated via PB002 process.</description>
    <inlineHelpText>Name of the primary service resource linked to the Service Appointment.</inlineHelpText>
    <label>Primary Service Resource Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>