force-app/main/default/objects/ServiceAppointment/fields/Work_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Name__c</fullName>
    <description>Holds the Name of the Work Type linked to the Service Appointment. Populated via PB003 process.</description>
    <inlineHelpText>Name of the Work Type linked to the Service Appointment.</inlineHelpText>
    <label>Work Type Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>